--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -188,3 +188,26 @@ Continue with the full [getting started guide](/getting-started).
 
 We are incredibly grateful for the generous support of our sponsors. Their contributions help us to maintain and improve our project, ensuring we can continue to deliver quality work to our community. Thank you!
 
+
+## Acknowledgements 🙏
+
+We are deeply grateful for the generous grant support provided by:
+
+<p>
+
+
+  <a href="https://builders.mozilla.org/" title="Mozilla Builders 2024" target="_blank" rel="noopener">
+    <img src="https://builders.mozilla.org/wp-content/uploads/2024/12/Builders_Social_Share.png" alt="Mozilla" width={"100%"} style={{verticalAlign:'middle',marginRight:'12px'}} />
+    <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>Mozilla Builders 2024</span>
+  </a>
+
+  <br/>
+  <br/>
+
+  <a href="https://github.com/accelerator" title="GitHub Accelerator 2024" target="_blank" rel="noopener">
+    <img src="https://github.blog/wp-content/uploads/2024/02/accelerator2024.jpg?w=1032" alt="GitHub" width={"100%"} style={{verticalAlign:'middle',marginRight:'16px'}} />
+    <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>GitHub Accelerator 2024</span>
+  </a>
+
+  
+</p>
