--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -197,7 +197,7 @@ We are deeply grateful for the generous grant support provided by:
 
 
   <a href="https://builders.mozilla.org/" title="Mozilla Builders 2024" target="_blank" rel="noopener">
-    <img src="https://builders.mozilla.org/wp-content/uploads/2024/12/Builders_Social_Share.png" alt="Mozilla" width={"100%"} style={{verticalAlign:'middle',marginRight:'12px'}} />
+    <img src="/images/grants/mozilla.png" alt="Mozilla" width={"300px"} style={{verticalAlign:'middle',marginRight:'12px'}} />
     <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>Mozilla Builders 2024</span>
   </a>
 
@@ -205,7 +205,7 @@ We are deeply grateful for the generous grant support provided by:
   <br/>
 
   <a href="https://github.com/accelerator" title="GitHub Accelerator 2024" target="_blank" rel="noopener">
-    <img src="https://github.blog/wp-content/uploads/2024/02/accelerator2024.jpg?w=1032" alt="GitHub" width={"100%"} style={{verticalAlign:'middle',marginRight:'16px'}} />
+    <img src="/images/grants/github.png" alt="GitHub" width={"300px"} style={{verticalAlign:'middle',marginRight:'16px'}} />
     <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>GitHub Accelerator 2024</span>
   </a>
 
