--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -20,17 +20,17 @@ There are many servers and tools that expose an OpenAI-compatible API. Here are 
 - [Llama.cpp](https://github.com/ggml-org/llama.cpp): Extremely efficient, runs on CPU and GPU
 - [Ollama](https://ollama.com/): Super user-friendly and cross-platform
 - [LM Studio](https://lmstudio.ai/): Rich desktop app for Windows/Mac/Linux
-- [Lemonade (ONNX TurnkeyML)](https://github.com/onnx/turnkeyml): Fast ONNX-based backend with NPU/iGPU acceleration
+- [Lemonade](https://lemonade-server.ai/): Fast ONNX-based backend with NPU/iGPU acceleration
 
 Pick whichever suits your workflow!
 
 ---
 
-#### 🍋 Get Started with Lemonade (ONNX TurnkeyML)
+#### 🍋 Get Started with Lemonade
 
 Lemonade is a plug-and-play ONNX-based OpenAI-compatible server. Here’s how to try it on Windows:
 
-1. [Download the latest `.exe`](https://github.com/onnx/turnkeyml/releases)
+1. [Download the latest `.exe`](https://github.com/lemonade-sdk/lemonade)
 2. Run `Lemonade_Server_Installer.exe`
 3. Install and download a model using Lemonade’s installer
 4. Once running, your API endpoint will be:
@@ -41,7 +41,7 @@ Lemonade is a plug-and-play ONNX-based OpenAI-compatible server. Here’s how to
 
 ![Lemonade Server](/images/getting-started/lemonade-server.png)
 
-See [their docs](https://github.com/onnx/turnkeyml) for details.
+See [their docs](https://lemonade-server.ai/) for details.
 
 ---
 
