--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -3,6 +3,11 @@ sidebar_position: 1900
 title: "⚖️ Open WebUI License"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
+
 ## Keeping Open WebUI Free, Fair, and Sustainable
 
 If you've been following Open WebUI’s journey, you know our mission has always been: empower everyone with cutting-edge AI, no strings attached. Open WebUI is an independent project, built and maintained by a small, dedicated core team. Over the last year, we’ve poured **countless hours, late nights, and real financial resources** into making this tool world-class—**and we trust our users enough to keep it free and open**.
