--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -3,6 +3,9 @@ sidebar_position: 2000
 title: "🏢 Open WebUI for Enterprises"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
 
 :::tip
 
