--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -31,7 +31,14 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 ## **Let’s Talk**  
 
+
+:::note
+To help us respond quickly and efficiently to your inquiry, **please use your official work email address**—Gmail and Hotmail accounts are often blocked by our system and cannot be found. Submitting with your company email ensures your request is recognized, prioritized, and connected to your organization.
+:::
+
+
 📧 **sales@openwebui.com** — Send us your **team size**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
+
 
 Take your AI strategy to the next level with our **premium enterprise solutions**, crafted for organizations that demand **expert consulting, tailored deployment, and dedicated support.**  
 
