--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -7,9 +7,9 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-## 🌟 Meet Our Development Team!
+## 🌟 Meet Our Core Development Team!
 
-Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official full-time member of the development team, we are incredibly fortunate to have a community of **[amazing contributors](https://github.com/open-webui/open-webui/graphs/contributors)** who find this project valuable and actively participate in its continued success.
+Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official full-time member of the core development team, we’re also supported by talented team members from our company who work hard behind the scenes to make this project great. In addition, we are incredibly fortunate to have a community of **[amazing contributors](https://github.com/open-webui/open-webui/graphs/contributors)** who find this project valuable and actively participate in its continued success.
 
 ### 💓 Our Contributors
 
