Update functions docs

--- a/docs/features/plugin/index.mdx
+++ b/docs/features/plugin/index.mdx
@@ -52,6 +52,14 @@ For instance, maybe you want to:
 
 Without functions, these would all be out of reach. But with this framework in Open WebUI, you can easily extend these features!
 
+### Where to Find and Manage Functions
+
+Functions are not located in the same place as Tools.
+
+- **Tools** are about model access and live in your **Workspace tabs** (where you add models, prompts, and knowledge collections).
+- **Functions** are about **platform customization** and are found in the **Admin Panel**.  
+They are typically managed by admins who want to extend the platform interface or behavior for all users.
+
 ### Summary of Differences:
 - **Tools** are things that allow LLMs to **do more things** outside their default abilities (such as retrieving live info or performing custom tasks based on external data).
 - **Functions** help the WebUI itself **do more things**, like adding new AI models or creating smarter ways to filter data.
