--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -29,9 +29,9 @@ For more details on enterprise solutions and branding customizations, please con
 
 **A:** Open WebUI offers two ways to connect to LLM APIs:
 
-- **External Connections**: The central backend server handles API requests on behalf of users. For example, when the Open WebUI backend is deployed, it will send requests directly to LLM APIs. This method cannot access services running locally on your machine.
+- **External Connections**: The central backend server handles API requests on behalf of users. For example, when the Open WebUI backend is deployed, it will send requests directly to LLM APIs. This method cannot access services running locally on your machine. These connections can be added from the **`Admin Panel > Settings > Connections`**.
 
-- **Direct Connections**: The browser sends API requests directly, bypassing the backend server. This allows interaction with local or external services from your own computer.
+- **Direct Connections**: The browser sends API requests directly, bypassing the backend server. This allows interaction with local or external services from your own computer. These connections can be added from the **`Settings > Connections`**.
 
 > **Note:** Direct connections are not fully supported yet and may have limited functionality.
 
