--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -184,6 +184,11 @@ Anything pre-0.6.6 is pure BSD-3—**these branding limits didn’t exist**. The
 
 Otherwise, you must retain branding and clearly say your fork isn't the official version.
 
+### **10. I’m an academic/non-profit researcher. Can I customize or remove branding for a research study?**
+
+**Absolutely—academic research matters to us!** If you are a non-profit or academic institution running a research study and require branding changes (removal, customization, or white-labeling) for study purposes, **please email us at [hello@openwebui.com](mailto:hello@openwebui.com) with details about your project**. We review these requests on a case-by-case basis. We’re committed to supporting research and education, and _in almost all cases, we gladly grant permission for branding customizations or exemptions to facilitate your academic study—just ask!_  
+Please ensure your request includes your institution, the research purpose, and expected duration/scale of your deployment. We’re here to help you advance open, reproducible science!
+
 ### **TL;DR: Want to use Open WebUI for free? Just keep the branding.**
 
 - **No hidden costs, no trickery.**
